--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nombre-del-proyecto",
+  "name": "paramedic-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
