--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,13 +6,13 @@
     "start": "ts-node app.ts",
     "dev": "nodemon --watch ./ --exec \"ts-node --loader ts-node/esm\" app.ts"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
