--- a/src/backend/frontend/package.json
+++ b/src/backend/frontend/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc && cd ../frontend && npm install && npm run build && cd ../backend",
-    "start": "node dist/app.js",
-    "dev": "ts-node-dev --respawn --transpile-only app.ts"
+    "build": "vite build",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
